Fix issue with product viewer on small screen touch devices.

--- a/themes/e-commerce/static/css/e-commerce.css
+++ b/themes/e-commerce/static/css/e-commerce.css
@@ -325,4 +325,9 @@ body{webkit-tap-highlight-color:#A6CE39;}
 
 .sp-wrap {
     max-width: 100%;
+    margin: 0;
+}
+
+.product-viewer{
+    display: inline-block;
 }
